BoaUAT/src/objects/Pricing_Policy_with_Customer__c.object
<CustomObject>
    <fields>
        <fullName>Customers__c</fullName>
        <label>Customers</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Account doesn&apos;t exist or it should be of customer type.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Enterprise Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pricing Policies with Customers</relationshipLabel>
        <relationshipName>Pricing_Policies_with_Customers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pricing_Policy__c</fullName>
        <label>Pricing Policy</label>
        <referenceTo>Pricing_Policy__c</referenceTo>
        <relationshipLabel>Pricing Policies with Cusotmers</relationshipLabel>
        <relationshipName>Pricing_Policies_with_Cusotmers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <label>Transaction Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Pricing Policy with Customer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pricing Policy with Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Policies with Customers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>